--- a/login.html
+++ b/login.html
@@ -67,11 +67,15 @@ button:hover{
 
 <script>
 /* 🔥 FIREBASE CONFIG (replace with your keys) */
+// Firebase configuration (FINAL – CORRECT)
 const firebaseConfig = {
-  apiKey: "PASTE_HERE",
-  authDomain: "PASTE_HERE",
-  projectId: "PASTE_HERE",
-  appId: "PASTE_HERE"
+  apiKey: "AIzaSyAJliCUJkElsPwbJUGrTUmB7EPyiGaCniQ",
+  authDomain: "eic-billing-software-55635.firebaseapp.com",
+  projectId: "eic-billing-software-55635",
+  storageBucket: "eic-billing-software-55635.appspot.com",
+  messagingSenderId: "376103136888",
+  appId: "1:376103136888:web:ae1ab4d7195037a529478d",
+  measurementId: "G-VJ0XY7WV08"
 };
 
 firebase.initializeApp(firebaseConfig);
