Change Firebase storage bucket URL
Updated Firebase storage bucket URL in configuration.

--- a/login.html
+++ b/login.html
@@ -67,12 +67,12 @@ button:hover{
 
 <script>
 /* 🔥 FIREBASE CONFIG (replace with your keys) */
-// Firebase configuration (FINAL – CORRECT)
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyAJliCUJkElsPwbJUGrTUmB7EPyiGaCniQ",
   authDomain: "eic-billing-software-55635.firebaseapp.com",
   projectId: "eic-billing-software-55635",
-  storageBucket: "eic-billing-software-55635.appspot.com",
+  storageBucket: "eic-billing-software-55635.firebasestorage.app",
   messagingSenderId: "376103136888",
   appId: "1:376103136888:web:ae1ab4d7195037a529478d",
   measurementId: "G-VJ0XY7WV08"
