Update sidebar links to include full paths

--- a/shared/menu.html
+++ b/shared/menu.html
@@ -5,39 +5,39 @@
 <div id="sidebar">
   <h3>Billing App</h3>
 
-  <a href="dashboard.html" data-page="dashboard">
+  <a href="/billing-software/dashboard.html" data-page="dashboard">
     📊 Dashboard <span class="activeDot"></span>
   </a>
 
-  <a href="index.html" data-page="index">
+  <a href="/billing-software/index.html" data-page="index">
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <a href="masters/client.html" data-page="client">
+  <a href="/billing-software/masters/client.html" data-page="client">
     👤 Client Master <span class="activeDot"></span>
   </a>
 
-  <a href="masters/vendor.html" data-page="vendor">
+  <a href="/billing-software/masters/vendor.html" data-page="vendor">
     🏭 Vendor Master <span class="activeDot"></span>
   </a>
   
-  <a href="masters/purchase.html">
+  <a href="/billing-software/masters/purchase.html">
     🧾 Purchase Entry
   </a>
 
-  <a href="purchase-register.html">
+  <a href="/billing-software/purchase-register.html">
     🧾 Purchase Register <span class="activeDot"></span>
   </a>
 
-  <a href="register.html" data-page="register">
+  <a href="/billing-software/register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
 
-  <a href="settings.html" data-page="settings">
+  <a href="/billing-software/settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
   </a>
 
-  <a href="recyclebin.html" data-page="recycle">
+  <a href="/billing-software/recyclebin.html" data-page="recycle">
     🗑 Recycle Bin <span class="activeDot"></span>
   </a>
 
