--- a/shared/menu.html
+++ b/shared/menu.html
@@ -5,44 +5,44 @@
 <div id="sidebar">
   <h3>Billing App</h3>
 
-  <a href="/billing-software/dashboard.html" data-page="dashboard">
+  <a href="#" onclick="go('dashboard.html')" data-page="dashboard">
     📊 Dashboard <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/index.html" data-page="index">
+  <a href="#" onclick="go('index.html')" data-page="index">
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/masters/client.html" data-page="client">
+  <a href="#" onclick="go('masters/client.html')" data-page="client">
     👤 Client Master <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/masters/vendor.html" data-page="vendor">
+  <a href="#" onclick="go('masters/vendor.html')" data-page="vendor">
     🏭 Vendor Master <span class="activeDot"></span>
   </a>
-  
-  <a href="/billing-software/masters/purchase.html">
+
+  <a href="#" onclick="go('masters/purchase.html')">
     🧾 Purchase Entry
   </a>
 
-  <a href="/billing-software/purchase-register.html">
+  <a href="#" onclick="go('purchase-register.html')">
     🧾 Purchase Register <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/register.html" data-page="register">
+  <a href="#" onclick="go('register.html')" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/settings.html" data-page="settings">
+  <a href="#" onclick="go('settings.html')" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
   </a>
 
-  <a href="/billing-software/recyclebin.html" data-page="recycle">
+  <a href="#" onclick="go('recyclebin.html')" data-page="recycle">
     🗑 Recycle Bin <span class="activeDot"></span>
   </a>
 
-  <!-- LOGOUT -->
   <hr>
+
   <a href="#" onclick="logout()">
     🚪 Logout
   </a>
