Refactor sidebar links to use data attributes

--- a/shared/menu.html
+++ b/shared/menu.html
@@ -5,47 +5,46 @@
 <div id="sidebar">
   <h3>Billing App</h3>
 
-  <a href="#" onclick="go('dashboard.html')" data-page="dashboard">
-    📊 Dashboard <span class="activeDot"></span>
+  <a data-go="dashboard.html" data-page="dashboard">📊 Dashboard
+<span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('index.html')" data-page="index">
-    🧾 Billing <span class="activeDot"></span>
+  <a data-go="index.html" data-page="index">🧾 Billing
+<span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('masters/client.html')" data-page="client">
-    👤 Client Master <span class="activeDot"></span>
+  <a data-go="masters/client.html" data-page="client">👤 Client Master
+<span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('masters/vendor.html')" data-page="vendor">
-    🏭 Vendor Master <span class="activeDot"></span>
+<a data-go="masters/vendor.html" data-page="vendor">🏭 Vendor Master 
+  <span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('masters/purchase.html')">
-    🧾 Purchase Entry
+<a data-go="masters/purchase.html">🧾 Purchase Entry
+  <span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('purchase-register.html')">
-    🧾 Purchase Register <span class="activeDot"></span>
+<a data-go="purchase-register.html">🧾 Purchase Register
+ <span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('register.html')" data-page="register">
-    📂 Records <span class="activeDot"></span>
+<a data-go="register.html" data-page="register">📂 Records
+ <span class="activeDot"></span>
+  </a>
+  
+<a data-go="settings.html" data-page="settings">⚙ Settings
+ <span class="activeDot"></span>
   </a>
 
-  <a href="#" onclick="go('settings.html')" data-page="settings">
-    ⚙ Settings <span class="activeDot"></span>
-  </a>
-
-  <a href="#" onclick="go('recyclebin.html')" data-page="recycle">
-    🗑 Recycle Bin <span class="activeDot"></span>
+  <a data-go="recyclebin.html" data-page="recycle">🗑 Recycle Bin
+   <span class="activeDot"></span>
   </a>
 
   <hr>
 
-  <a href="#" onclick="logout()">
-    🚪 Logout
-  </a>
+
+  <a id="logoutBtn">🚪 Logout</a>
 </div>
 
 <!-- OVERLAY -->
