--- a/shared/menu.html
+++ b/shared/menu.html
@@ -5,46 +5,45 @@
 <div id="sidebar">
   <h3>Billing App</h3>
 
-  <a data-go="dashboard.html" data-page="dashboard">📊 Dashboard
-<span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="dashboard.html" data-page="dashboard">
+    📊 Dashboard <span class="activeDot"></span>
   </a>
 
-  <a data-go="index.html" data-page="index">🧾 Billing
-<span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="index.html" data-page="index">
+    🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <a data-go="masters/client.html" data-page="client">👤 Client Master
-<span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="masters/client.html" data-page="client">
+    👤 Client Master <span class="activeDot"></span>
   </a>
 
-<a data-go="masters/vendor.html" data-page="vendor">🏭 Vendor Master 
-  <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="masters/vendor.html" data-page="vendor">
+    🏭 Vendor Master <span class="activeDot"></span>
   </a>
 
-<a data-go="masters/purchase.html">🧾 Purchase Entry
-  <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="masters/purchase.html">
+    🧾 Purchase Entry <span class="activeDot"></span>
   </a>
 
-<a data-go="purchase-register.html">🧾 Purchase Register
- <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="purchase-register.html">
+    🧾 Purchase Register <span class="activeDot"></span>
   </a>
 
-<a data-go="register.html" data-page="register">📂 Records
- <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="register.html" data-page="register">
+    📂 Records <span class="activeDot"></span>
   </a>
   
-<a data-go="settings.html" data-page="settings">⚙ Settings
- <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="settings.html" data-page="settings">
+    ⚙ Settings <span class="activeDot"></span>
   </a>
 
-  <a data-go="recyclebin.html" data-page="recycle">🗑 Recycle Bin
-   <span class="activeDot"></span>
+  <a href="javascript:void(0)" data-go="recyclebin.html" data-page="recycle">
+    🗑 Recycle Bin <span class="activeDot"></span>
   </a>
 
   <hr>
 
-
-  <a id="logoutBtn">🚪 Logout</a>
+  <a href="javascript:void(0)" id="logoutBtn">🚪 Logout</a>
 </div>
 
 <!-- OVERLAY -->
