--- a/shared/menu.html
+++ b/shared/menu.html
@@ -6,48 +6,39 @@
   <h3>Billing App</h3>
 
   <a data-go="dashboard.html" data-page="dashboard">
-    📊 Dashboard
-    <span class="activeDot"></span>
+    📊 Dashboard <span class="activeDot"></span>
   </a>
 
   <a data-go="index.html" data-page="index">
-    🧾 Billing
-    <span class="activeDot"></span>
+    🧾 Billing <span class="activeDot"></span>
   </a>
 
   <a data-go="masters/client.html" data-page="client">
-    👤 Client Master
-    <span class="activeDot"></span>
+    👤 Client Master <span class="activeDot"></span>
   </a>
 
   <a data-go="masters/vendor.html" data-page="vendor">
-    🏭 Vendor Master
-    <span class="activeDot"></span>
+    🏭 Vendor Master <span class="activeDot"></span>
   </a>
 
   <a data-go="masters/purchase.html">
     🧾 Purchase Entry
-    <span class="activeDot"></span>
   </a>
 
   <a data-go="purchase-register.html">
     🧾 Purchase Register
-    <span class="activeDot"></span>
   </a>
 
   <a data-go="register.html" data-page="register">
-    📂 Records
-    <span class="activeDot"></span>
+    📂 Records <span class="activeDot"></span>
   </a>
 
   <a data-go="settings.html" data-page="settings">
-    ⚙ Settings
-    <span class="activeDot"></span>
+    ⚙ Settings <span class="activeDot"></span>
   </a>
 
   <a data-go="recyclebin.html" data-page="recycle">
-    🗑 Recycle Bin
-    <span class="activeDot"></span>
+    🗑 Recycle Bin <span class="activeDot"></span>
   </a>
 
   <hr>
