Add menu container and main content area to dashboard
Added a new menu container and main content area.

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+
+   <div id="menuContainer"></div>
+
+  <div class="main">
+    <!-- page content here -->
+  </div>
 <div id="menuContainer"></div>
 
 <h2>📊 Dashboard</h2>
