Load menu from shared/menu.html dynamically

--- a/dashboard.html
+++ b/dashboard.html
@@ -74,6 +74,14 @@ fetch("shared/menu.html")
     initMenu();
   });
 </script>
-
+<script src="shared/menu.js"></script>
+  <script>
+    fetch("shared/menu.html")
+      .then(r=>r.text())
+      .then(html=>{
+        menuContainer.innerHTML = html;
+        initMenu();
+      });
+  </script>
 </body>
 </html>
