Add scripts for data storage and billing

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ if(!localStorage.getItem("user")){
 <body>
 <div id="menuContainer"></div>
 
-
+<div class="main">
 
 
 <h2 id="printTitle">Billing / Quotation</h2>  
@@ -836,7 +836,7 @@ function calcDue(){
 }
 </script>
 
-
+</div> 
 
 
 <script>
@@ -864,7 +864,9 @@ function numberToWords(num){
 }
 </script>
 
-
+<script>
+function autoResize(el){...}
+</script>
 <!-- ✅ ADD THESE TWO LINES HERE -->
 <script src="data/storage.js"></script>
 <script src="data/bills.js"></script>
