--- a/masters/purchase.html
+++ b/masters/purchase.html
@@ -8,10 +8,17 @@
 
 <style>
 body{
+  margin:0;
   font-family:Arial;
   background:#f4f6fb;
-  padding:20px;
 }
+
+/* main content */
+.main{
+  padding:20px;
+  max-width:1200px;
+}
+
 .card{
   background:#fff;
   padding:16px;
@@ -19,29 +26,58 @@ body{
   box-shadow:0 10px 25px rgba(0,0,0,.08);
   margin-bottom:20px;
 }
+
 .grid{
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:20px;
 }
-table{width:100%;border-collapse:collapse}
-th,td{padding:8px;border-bottom:1px solid #eee}
-th{background:#f1f3f9}
-input,select,button{
-  padding:8px;width:100%;margin-bottom:8px;
-  border-radius:8px;border:1px solid #ccc
+
+table{
+  width:100%;
+  border-collapse:collapse;
 }
+
+th,td{
+  padding:8px;
+  border-bottom:1px solid #eee;
+}
+
+th{background:#f1f3f9}
+
+input,select,button{
+  padding:8px;
+  width:100%;
+  margin-bottom:8px;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+
 button{
-  background:#2d6cdf;color:#fff;border:none;cursor:pointer
+  background:#2d6cdf;
+  color:#fff;
+  border:none;
+  cursor:pointer;
 }
 button:hover{background:#1f4fd8}
+
 .right{text-align:right}
+
+@media(max-width:900px){
+  .grid{
+    grid-template-columns:1fr;
+  }
+}
 </style>
 </head>
 
 <body>
 
-<div id="menu-holder"></div>
+<!-- MENU -->
+<div id="menuContainer"></div>
+
+<!-- PAGE CONTENT -->
+<div class="main">
 
 <h2>🧾 Purchase Entry (Vendor Bill)</h2>
 
@@ -50,18 +86,19 @@ button:hover{background:#1f4fd8}
   <div>
     <label>Vendor</label>
     <select id="vendorSelect"></select>
-<hr>
 
-<h3>📎 Purchase Bill Upload</h3>
+    <hr>
 
-<input
-  type="file"
-  id="billFiles"
-  multiple
-  accept=".jpg,.jpeg,.png,.pdf"
-/>
+    <h3>📎 Purchase Bill Upload</h3>
 
-<div id="billPreview" style="margin-top:10px"></div>
+    <input
+      type="file"
+      id="billFiles"
+      multiple
+      accept=".jpg,.jpeg,.png,.pdf"
+    >
+
+    <div id="billPreview" style="margin-top:10px"></div>
 
     <label>Bill No</label>
     <input id="billNo">
@@ -76,11 +113,8 @@ button:hover{background:#1f4fd8}
       <option value="intra">CGST + SGST</option>
       <option value="inter">IGST</option>
     </select>
-
-
   </div>
 
-  
 </div>
 
 <div class="card">
@@ -108,6 +142,9 @@ button:hover{background:#1f4fd8}
   <button onclick="savePurchaseUI()">💾 Save Purchase</button>
 </div>
 
+</div>
+
+<!-- DATA -->
 <script src="../data/vendor.js"></script>
 <script src="../data/vendor-items.js"></script>
 <script src="../data/recyclebin.js"></script>
@@ -150,6 +187,7 @@ function addRow(){
 
   loadVendorItems(tr);
 }
+
 function loadVendorItems(tr){
   const vendorId = vendorSelect.value;
   if(!vendorId) return;
@@ -175,7 +213,6 @@ function loadVendorItems(tr){
     }
   };
 }
-
 
 /* CALC */
 function calc(){
@@ -209,29 +246,28 @@ function savePurchaseUI(){
     vendorId: vendorSelect.value,
     billNo: billNo.value,
     date: billDate.value,
-    total: grand.innerText,
+    total: grandEl.innerText,
     items
   });
 
   alert("Purchase Saved");
   itemBody.innerHTML = "";
-  grand.innerText = "0.00";
+  grandEl.innerText = "0.00";
 }
 
 /* INIT */
 loadVendors();
 addRow();
-
-/* AUTO DATE */
 billDate.value = new Date().toISOString().slice(0,10);
 </script>
 
+<!-- MENU -->
 <script src="../shared/menu.js"></script>
 <script>
 fetch("../shared/menu.html")
   .then(r=>r.text())
   .then(html=>{
-    document.getElementById("menu-holder").innerHTML = html;
+    document.getElementById("menuContainer").innerHTML = html;
     initMenu();
   });
 </script>
