--- a/shared/menu.html
+++ b/shared/menu.html
@@ -5,6 +5,7 @@
 <div id="sidebar">
   <h3>Billing App</h3>
 
+  <!-- COMMON -->
   <a data-go="dashboard.html" data-page="dashboard">
     📊 Dashboard <span class="activeDot"></span>
   </a>
@@ -13,28 +14,29 @@
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <a data-go="masters/client.html" data-page="client">
-    👤 Client Master <span class="activeDot"></span>
-  </a>
-
-  <a data-go="masters/vendor.html" data-page="vendor">
-    🏭 Vendor Master <span class="activeDot"></span>
-  </a>
-
-  <a data-go="masters/purchase.html">
-    🧾 Purchase Entry
-  </a>
-
-  <a data-go="purchase-register.html">
-    🧾 Purchase Register
-  </a>
-
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
 
-  <a data-go="settings.html" data-page="settings">
+  <!-- ADMIN ONLY -->
+  <a class="admin-only" data-go="masters/client.html" data-page="client">
+    👤 Client Master <span class="activeDot"></span>
+  </a>
+
+  <a class="admin-only" data-go="masters/vendor.html" data-page="vendor">
+    🏭 Vendor Master <span class="activeDot"></span>
+  </a>
+
+  <a class="admin-only" data-go="masters/purchase.html">
+    🧾 Purchase Entry
+  </a>
+
+  <a class="admin-only" data-go="settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
+  </a>
+
+  <a class="admin-only" data-go="admin-users.html">
+    👤 Users
   </a>
 
   <a data-go="recyclebin.html" data-page="recycle">
